[incubator-kie-issues-1439] UserTask Decouple codegen and interface from engine (#3655)